# eyesbreaker

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: cli.rs  main.rs  timer.rs
