[package]
description = "Relax your eyes and take a break"
edition     = "2021"
homepage    = "https://github.com/lxl66566/eyesbreaker"
keywords    = ["eyes", "break", "relax"]
license     = "MIT"
name        = "eyesbreaker"
readme      = "README.md"
repository  = "https://github.com/lxl66566/eyesbreaker"
version     = "0.1.1"


[dependencies]
clap              = { version = "4.5.21", features = ["derive"] }
image             = "0.25.5"
log               = "0.4.22"
pretty_env_logger = "0.5.0"
tray-icon         = "0.19.1"
winit             = "0.30.5"

[target."cfg(unix)".dependencies]
gtk = "0.18.1"

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"
strip     = true
